# yunshu-api-data-platform

./: .dockerignore  .gitignore  AGENTS.md  HOW_TO_INSTALL.md  LICENSE  README.md  README_EN.md  dev.sh  env.example  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt  stop-dev.sh
app/: main.py  mcp_integration.py
architech/: README.md
db-prod/: INIT-USER-ADMIN.sql  README.md  V0-dynamic_resource_config.sql  V1-resource-status-mapping.sql  V10-init-ai-config.sql  V11-rbac-and-ui-permissions.sql  V12-add-rate-limiting-config.sql  V13-add-audit-action-type.sql  V14-audit-log-sharding-template.sql  V15-add-datasource-sort-order.sql  V16-drop-deprecated-log-tables.sql  V18-data-masking-and-strategy.sql  V19-implement-semantic-metadata.sql  V2-datasource-management.sql  V20-add-metadata-rbac-and-resource.sql  V21-add-ai-embedding-and-rerank-config.sql  V22-separate-ai-model-configs.sql  V23-add-dataset-vector-status.sql  V24-add-metadata-health-score.sql  V25-add-metadata-creator.sql  V26-data-product-catalog-module.sql  V27-revoke-catalog-requests-menu-default-grant.sql  V28-resource-version-history.sql  V29-catalog-change-notifications.sql  V3-add-sql-execution-resource.sql  V30-dingtalk-approval-notify.sql  V31-mcp-server-config.sql  V32-mcp-public-base-url.sql  V33-branding-config.sql  V34-wecom-notify.sql  V35-branding-copyright.sql  V36-add-datasource-profiling.sql  V37-lab-enhancements.sql  V39-lab-table-favorites.sql  V4-add-user-auth.sql  V40-rebrand-nanzi.sql  V5-alter-resource-key-length.sql  V6-add-cache-ttl.sql  V7-add-audit-log-indexes.sql  (+6 more)
(+517 files in other folders)
