[project]
name = "yunshu-api-data-platform"
version = "1.0.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=40"

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "db-prod/*"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".gemini", ".agent", "frontend", "venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["tests/", "scripts/", "frontend/"]
